--- a/yml/dep.yml
+++ b/yml/dep.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: youtub2e
-        image: sevenajay/youtube:1.0.60
+        image: murulii/youtube:1.0.61
         ports:
         - containerPort: 3000
 ---
